# mlops-automator

./: .gitignore  README.md  openapi.yml  pyproject.toml
src/mlops_automator/: package-lock.json  package.json
src/mlops_automator/api_service/: main.py
src/mlops_automator/api_service/automation_services/: automation_process.py  automation_task.py
src/mlops_automator/api_service/models/: process_model.py  task_model.py
src/mlops_automator/api_service/routers/: process_router.py  task_router.py
src/mlops_automator/api_service/static/: README.md  app.js  index.html  main.css
src/mlops_automator/api_service/static/js/models/: app.models.js  app_models.js  process_model.js  task_model.js
src/mlops_automator/api_service/static/js/views/: app_views.js
