[tool.poetry]
name = "mlops-automator"
version = "0.1.0"
description = "Example MLOps Automation solution"
authors = ["Chris Ottinger <chris.ottinger@gammadata.io>"]
license = "MIT"
readme = "README.md"

packages = [{include="*", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pendulum = "^3.0.0"
pydantic = {extras = ["extra-types"], version = "^2.10.4"}
pydantic-extra-types = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
